--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libbbmotor (0.1.1-1) unstable; urgency=medium
+
+  * New upstream release 0.1.1 (Joined up writing)
+
+ -- Benedikt Spranger <b.spranger@linutronix.de>  Sat, 20 Jul 2019 17:57:22 +0200
+
 libbbmotor (0.1.0-1) unstable; urgency=medium
 
   * Initial release.
