--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libbbmotor (0.1.3-1) unstable; urgency=medium
+
+  * Initial locking
+  * DC motor support
+  * New upstream version 0.1.3
+
+ -- Benedikt Spranger <b.spranger@linutronix.de>  Tue, 17 Dec 2019 23:56:29 +0100
+
 libbbmotor (0.1.2-1) unstable; urgency=medium
 
   * Create docs
